--- a/index.html
+++ b/index.html
@@ -380,6 +380,16 @@
                     <pre id="generatedCode"></pre>
                 </div>
             </div>
+
+
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>Copyright © 2024 • All rights reserved.<br>Powered with 💖 by Bebell Digital Solutions.</p>
+    </footer>
+
+
+        
         </div>
     </div>
     
