--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
 
 
   .bebell-footer p {
+    align-items: center;     /* Vertical centering */
+    text-align: center;      /* Center text within paragraph */
     font-size: 12px;
     line-height: 1.5;
     margin: 0;
